tests/rosetta/out/C/bifid-cipher.error
cc: exit status 1
/tmp/bifid-cipher.c:152:3: error: unknown type name ‘map_string’
  152 |   map_string d;
      |   ^~~~~~~~~~
/tmp/bifid-cipher.c: In function ‘square_to_maps’:
/tmp/bifid-cipher.c:171:14: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  171 |   int emap = tmp1;
      |              ^~~~
/tmp/bifid-cipher.c:173:3: error: unknown type name ‘map_string’; did you mean ‘map_string_int’?
  173 |   map_string dmap = tmp2;
      |   ^~~~~~~~~~
      |   map_string_int
/tmp/bifid-cipher.c:173:21: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  173 |   map_string dmap = tmp2;
      |                     ^~~~
/tmp/bifid-cipher.c:175:20: error: request for member ‘len’ in something not a structure or union
  175 |   while (x < square.len) {
      |                    ^
/tmp/bifid-cipher.c:176:29: error: request for member ‘data’ in something not a structure or union
  176 |     list_string row = square.data[x];
      |                             ^
/tmp/bifid-cipher.c:186:11: error: request for member ‘data’ in something not a structure or union
  186 |       emap.data[ch] = tmp4;
      |           ^
/tmp/bifid-cipher.c:195:11: error: request for member ‘data’ in something not a structure or union
  195 |       dmap.data[tmp12] = ch;
      |           ^
/tmp/bifid-cipher.c:200:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  200 |   return (tmp_item_t){.e = emap, .d = dmap};
      |          ^
/tmp/bifid-cipher.c: In function ‘remove_space’:
/tmp/bifid-cipher.c:204:13: warning: implicit declaration of function ‘upper’ [-Wimplicit-function-declaration]
  204 |   char *s = upper(text);
      |             ^~~~~
/tmp/bifid-cipher.c:204:13: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/tmp/bifid-cipher.c:210:37: error: expected ‘)’ before ‘in’
  210 |     if ((strcmp(ch, " ") != 0) && ch in emap) {
      |        ~                            ^~~
      |                                     )
/tmp/bifid-cipher.c: In function ‘encrypt’:
/tmp/bifid-cipher.c:227:23: error: request for member ‘data’ in something not a structure or union
  227 |     list_int xy = emap.data[ch];
      |                       ^
/tmp/bifid-cipher.c:256:21: error: request for member ‘data’ in something not a structure or union
  256 |     res = res + dmap.data[key];
      |                     ^
/tmp/bifid-cipher.c: In function ‘decrypt’:
/tmp/bifid-cipher.c:269:23: error: request for member ‘data’ in something not a structure or union
  269 |     list_int xy = emap.data[ch];
      |                       ^
/tmp/bifid-cipher.c:310:21: error: request for member ‘data’ in something not a structure or union
  310 |     res = res + dmap.data[key];
      |                     ^
/tmp/bifid-cipher.c: In function ‘mochi_main’:
/tmp/bifid-cipher.c:353:36: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                    ^~~~~
/tmp/bifid-cipher.c:353:43: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                           ^~~~~
/tmp/bifid-cipher.c:353:50: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                                  ^~~~~
/tmp/bifid-cipher.c:353:57: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                                         ^~~~~
/tmp/bifid-cipher.c:353:64: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                                                ^~~~~
/tmp/bifid-cipher.c:353:71: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  353 |   list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
      |                                                                       ^~~~~
/tmp/bifid-cipher.c:391:38: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                      ^~~~~
/tmp/bifid-cipher.c:391:45: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                             ^~~~~
/tmp/bifid-cipher.c:391:52: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                                    ^~~~~
/tmp/bifid-cipher.c:391:59: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                                           ^~~~~
/tmp/bifid-cipher.c:391:66: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                                                  ^~~~~
/tmp/bifid-cipher.c:391:73: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  391 |   list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
      |                                                                         ^~~~~
/tmp/bifid-cipher.c:396:29: error: incompatible type for argument 1 of ‘square_to_maps’
  396 |   int maps = square_to_maps(squareRosetta);
      |                             ^~~~~~~~~~~~~
      |                             |
      |                             list_list_int
/tmp/bifid-cipher.c:169:24: note: expected ‘int’ but argument is of type ‘list_list_int’
  169 | int square_to_maps(int square) {
      |                    ~~~~^~~~~~
/tmp/bifid-cipher.c:397:18: error: request for member ‘data’ in something not a structure or union
  397 |   int emap = maps.data["e"];
      |                  ^
/tmp/bifid-cipher.c:398:18: error: request for member ‘data’ in something not a structure or union
  398 |   int dmap = maps.data["d"];
      |                  ^
/tmp/bifid-cipher.c:408:25: error: incompatible type for argument 1 of ‘square_to_maps’
  408 |   maps = square_to_maps(squareWikipedia);
      |                         ^~~~~~~~~~~~~~~
      |                         |
      |                         list_list_int
/tmp/bifid-cipher.c:169:24: note: expected ‘int’ but argument is of type ‘list_list_int’
  169 | int square_to_maps(int square) {
      |                    ~~~~^~~~~~
/tmp/bifid-cipher.c:409:14: error: request for member ‘data’ in something not a structure or union
  409 |   emap = maps.data["e"];
      |              ^
/tmp/bifid-cipher.c:410:14: error: request for member ‘data’ in something not a structure or union
  410 |   dmap = maps.data["d"];
      |              ^
/tmp/bifid-cipher.c:420:25: error: incompatible type for argument 1 of ‘square_to_maps’
  420 |   maps = square_to_maps(squareWikipedia);
      |                         ^~~~~~~~~~~~~~~
      |                         |
      |                         list_list_int
/tmp/bifid-cipher.c:169:24: note: expected ‘int’ but argument is of type ‘list_list_int’
  169 | int square_to_maps(int square) {
      |                    ~~~~^~~~~~
/tmp/bifid-cipher.c:421:14: error: request for member ‘data’ in something not a structure or union
  421 |   emap = maps.data["e"];
      |              ^
/tmp/bifid-cipher.c:422:14: error: request for member ‘data’ in something not a structure or union
  422 |   dmap = maps.data["d"];
      |              ^
