tests/rosetta/out/C/bifid-cipher.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int e;
  map_string d;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int square_to_maps(int square) {
  map_string_int tmp1 = map_string_int_create(0);
  int emap = tmp1;
  map_string_int tmp2 = map_string_int_create(0);
  map_string dmap = tmp2;
  int x = 0;
  while (x < square.len) {
    list_string row = square.data[x];
    int y = 0;
    while (y < row.len) {
      char *ch = row.data[y];
      list_int tmp3 = list_int_create(2);
      tmp3.data[0] = x;
      tmp3.data[1] = y;
      list_int tmp4 = list_int_create(2);
      tmp4.data[0] = x;
      tmp4.data[1] = y;
      emap.data[ch] = tmp4;
      char *tmp5 = _str(x);
      char *tmp6 = concat_string(tmp5, ",");
      char *tmp7 = _str(y);
      char *tmp8 = concat_string(tmp6, tmp7);
      char *tmp9 = _str(x);
      char *tmp10 = concat_string(tmp9, ",");
      char *tmp11 = _str(y);
      char *tmp12 = concat_string(tmp10, tmp11);
      dmap.data[tmp12] = ch;
      y = y + 1;
    }
    x = x + 1;
  }
  return (tmp_item_t){.e = emap, .d = dmap};
}

char *remove_space(char *text, int emap) {
  char *s = upper(text);
  char *out = "";
  int i = 0;
  while (i < strlen(s)) {
    char *tmp13 = slice_string(s, i, i + 1);
    char *ch = tmp13;
    if ((strcmp(ch, " ") != 0) && ch in emap) {
      char *tmp14 = concat_string(out, ch);
      out = tmp14;
    }
    i = i + 1;
  }
  return out;
}

char *encrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int row0 = list_int_create(0);
  list_int row1 = list_int_create(0);
  int i = 0;
  while (i < strlen(text)) {
    char *tmp15 = slice_string(text, i, i + 1);
    char *ch = tmp15;
    list_int xy = emap.data[ch];
    int tmp16_data[1];
    list_int tmp16 = {1, tmp16_data};
    tmp16.data[0] = xy.data[0];
    list_int tmp17 = concat_list_int(row0, tmp16);
    row0 = tmp17;
    int tmp18_data[1];
    list_int tmp18 = {1, tmp18_data};
    tmp18.data[0] = xy.data[1];
    list_int tmp19 = concat_list_int(row1, tmp18);
    row1 = tmp19;
    i = i + 1;
  }
  for (int tmp20 = 0; tmp20 < row1.len; tmp20++) {
    int v = row1.data[tmp20];
    int tmp21_data[1];
    list_int tmp21 = {1, tmp21_data};
    tmp21.data[0] = v;
    list_int tmp22 = concat_list_int(row0, tmp21);
    row0 = tmp22;
  }
  char *res = "";
  int j = 0;
  while (j < row0.len) {
    char *tmp23 = _str(row0.data[j]);
    char *tmp24 = concat_string(tmp23, ",");
    char *tmp25 = _str(row0.data[j + 1]);
    char *tmp26 = concat_string(tmp24, tmp25);
    char *key = tmp26;
    res = res + dmap.data[key];
    j = j + 2;
  }
  return res;
}

char *decrypt(char *text, int emap, int dmap) {
  text = remove_space(text, emap);
  list_int coords = list_int_create(0);
  int i = 0;
  while (i < strlen(text)) {
    char *tmp27 = slice_string(text, i, i + 1);
    char *ch = tmp27;
    list_int xy = emap.data[ch];
    int tmp28_data[1];
    list_int tmp28 = {1, tmp28_data};
    tmp28.data[0] = xy.data[0];
    list_int tmp29 = concat_list_int(coords, tmp28);
    coords = tmp29;
    int tmp30_data[1];
    list_int tmp30 = {1, tmp30_data};
    tmp30.data[0] = xy.data[1];
    list_int tmp31 = concat_list_int(coords, tmp30);
    coords = tmp31;
    i = i + 1;
  }
  double half = ((double)coords.len) / ((double)2);
  list_int k1 = list_int_create(0);
  list_int k2 = list_int_create(0);
  int idx = 0;
  while (idx < half) {
    int tmp32_data[1];
    list_int tmp32 = {1, tmp32_data};
    tmp32.data[0] = coords.data[idx];
    list_int tmp33 = concat_list_int(k1, tmp32);
    k1 = tmp33;
    idx = idx + 1;
  }
  while (idx < coords.len) {
    int tmp34_data[1];
    list_int tmp34 = {1, tmp34_data};
    tmp34.data[0] = coords.data[idx];
    list_int tmp35 = concat_list_int(k2, tmp34);
    k2 = tmp35;
    idx = idx + 1;
  }
  char *res = "";
  int j = 0;
  while (j < half) {
    char *tmp36 = _str(k1.data[j]);
    char *tmp37 = concat_string(tmp36, ",");
    char *tmp38 = _str(k2.data[j]);
    char *tmp39 = concat_string(tmp37, tmp38);
    char *key = tmp39;
    res = res + dmap.data[key];
    j = j + 1;
  }
  return res;
}

int mochi_main() {
  list_string tmp40 = list_string_create(5);
  tmp40.data[0] = "A";
  tmp40.data[1] = "B";
  tmp40.data[2] = "C";
  tmp40.data[3] = "D";
  tmp40.data[4] = "E";
  list_string tmp41 = list_string_create(5);
  tmp41.data[0] = "F";
  tmp41.data[1] = "G";
  tmp41.data[2] = "H";
  tmp41.data[3] = "I";
  tmp41.data[4] = "K";
  list_string tmp42 = list_string_create(5);
  tmp42.data[0] = "L";
  tmp42.data[1] = "M";
  tmp42.data[2] = "N";
  tmp42.data[3] = "O";
  tmp42.data[4] = "P";
  list_string tmp43 = list_string_create(5);
  tmp43.data[0] = "Q";
  tmp43.data[1] = "R";
  tmp43.data[2] = "S";
  tmp43.data[3] = "T";
  tmp43.data[4] = "U";
  list_string tmp44 = list_string_create(5);
  tmp44.data[0] = "V";
  tmp44.data[1] = "W";
  tmp44.data[2] = "X";
  tmp44.data[3] = "Y";
  tmp44.data[4] = "Z";
  list_string tmp45 = list_string_create(5);
  tmp45.data[0] = "J";
  tmp45.data[1] = "1";
  tmp45.data[2] = "2";
  tmp45.data[3] = "3";
  tmp45.data[4] = "4";
  list_int squareRosetta_data[] = {tmp40, tmp41, tmp42, tmp43, tmp44, tmp45};
  list_list_int squareRosetta = {6, squareRosetta_data};
  list_string tmp46 = list_string_create(5);
  tmp46.data[0] = "B";
  tmp46.data[1] = "G";
  tmp46.data[2] = "W";
  tmp46.data[3] = "K";
  tmp46.data[4] = "Z";
  list_string tmp47 = list_string_create(5);
  tmp47.data[0] = "Q";
  tmp47.data[1] = "P";
  tmp47.data[2] = "N";
  tmp47.data[3] = "D";
  tmp47.data[4] = "S";
  list_string tmp48 = list_string_create(5);
  tmp48.data[0] = "I";
  tmp48.data[1] = "O";
  tmp48.data[2] = "A";
  tmp48.data[3] = "X";
  tmp48.data[4] = "E";
  list_string tmp49 = list_string_create(5);
  tmp49.data[0] = "F";
  tmp49.data[1] = "C";
  tmp49.data[2] = "L";
  tmp49.data[3] = "U";
  tmp49.data[4] = "M";
  list_string tmp50 = list_string_create(5);
  tmp50.data[0] = "T";
  tmp50.data[1] = "H";
  tmp50.data[2] = "Y";
  tmp50.data[3] = "V";
  tmp50.data[4] = "R";
  list_string tmp51 = list_string_create(5);
  tmp51.data[0] = "J";
  tmp51.data[1] = "1";
  tmp51.data[2] = "2";
  tmp51.data[3] = "3";
  tmp51.data[4] = "4";
  list_int squareWikipedia_data[] = {tmp46, tmp47, tmp48, tmp49, tmp50, tmp51};
  list_list_int squareWikipedia = {6, squareWikipedia_data};
  char *textRosetta = "0ATTACKATDAWN";
  char *textWikipedia = "FLEEATONCE";
  char *textTest = "The invasion will start on the first of January";
  int maps = square_to_maps(squareRosetta);
  int emap = maps.data["e"];
  int dmap = maps.data["d"];
  printf("from Rosettacode\n");
  char *tmp52 = concat_string("original:\t ", textRosetta);
  printf("%s\n", tmp52);
  char *s = encrypt(textRosetta, emap, dmap);
  char *tmp53 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp53);
  s = decrypt(s, emap, dmap);
  char *tmp54 = concat_string("and back:\t ", s);
  printf("%s\n", tmp54);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Wikipedia\n");
  char *tmp55 = concat_string("original:\t ", textWikipedia);
  printf("%s\n", tmp55);
  s = encrypt(textWikipedia, emap, dmap);
  char *tmp56 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp56);
  s = decrypt(s, emap, dmap);
  char *tmp57 = concat_string("and back:\t ", s);
  printf("%s\n", tmp57);
  maps = square_to_maps(squareWikipedia);
  emap = maps.data["e"];
  dmap = maps.data["d"];
  printf("from Rosettacode long part\n");
  char *tmp58 = concat_string("original:\t ", textTest);
  printf("%s\n", tmp58);
  s = encrypt(textTest, emap, dmap);
  char *tmp59 = concat_string("codiert:\t ", s);
  printf("%s\n", tmp59);
  s = decrypt(s, emap, dmap);
  char *tmp60 = concat_string("and back:\t ", s);
  printf("%s\n", tmp60);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
